# postrip

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/app/: admin.py  models.py  urls.py  views.py
apps/app/migrations/: 0001_initial.py
apps/authentication/: admin.py  forms.py  models.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_user_manager.py  0003_auto_20210301_0851.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/templates/accounts/: login.html
config/templates/includes/: footer-fullscreen.html  footer.html  navigation-fullscreen.html  navigation.html  sidenav.html
config/templates/layouts/: base-fullscreen.html
