[tool.poetry]
name = "post-trip"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.2.21"
python-decouple = "^3.4"
Unipath = "^1.1"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
